--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -1,7 +1,7 @@
 ---
 import { cva } from "class-variance-authority";
 
-import { cn } from "../utils/cn";
+import { cn } from "../lib/utils/cn";
 
 import type { HTMLAttributes } from "astro/types";
 import type { VariantProps } from "class-variance-authority";
@@ -31,16 +31,22 @@ const buttonStyles = cva(
 );
 
 export type Props = HTMLAttributes<"button"> &
-  VariantProps<typeof buttonStyles>;
+  VariantProps<typeof buttonStyles> & {
+    unstyled?: boolean;
+  };
 
 const {
   variant = "primary",
   size = "medium",
   class: className,
+  unstyled,
   ...props
 } = Astro.props;
 ---
 
-<button {...props} class={cn(buttonStyles({ variant, size, className }))}>
+<button
+  {...props}
+  class={unstyled ? className : cn(buttonStyles({ variant, size, className }))}
+>
   <slot />
 </button>
