--- a/src/layouts/Navbar.astro
+++ b/src/layouts/Navbar.astro
@@ -15,7 +15,7 @@ import ThemeToggle from "../components/ThemeToggle.astro";
       data-astro-prefetch
     >
       <Icon name="maktabah" size={35} />
-      <span class="ml-2.5 font-bold">Maktabah YARSI</span>
+      <span class="ml-2.5 font-semibold">Maktabah YARSI</span>
     </a>
     <ul class="flex items-center gap-10 font-bold">
       <li role="navigation">
@@ -30,7 +30,7 @@ import ThemeToggle from "../components/ThemeToggle.astro";
       <li role="navigation">
         <a
           class="hover:text-primary-light dark:hover:text-primary-dark"
-          href="/categories"
+          href="/categories/6573307da027a2e4a3a2828b"
           data-astro-prefetch
         >
           Daftar Buku
