feat: setup all pages except search page

--- a/src/components/Breadcrumb.astro
+++ b/src/components/Breadcrumb.astro
@@ -1,6 +1,7 @@
 ---
-import { cn } from "../lib/utils/cn";
 import Separator from "./Separator.astro";
+
+import { cn } from "~/lib/utils/cn";
 
 import type { HTMLAttributes } from "astro/types";
 
