--- a/src/components/PageControl.astro
+++ b/src/components/PageControl.astro
@@ -1,8 +1,8 @@
 ---
+import Input from "./Input.astro";
 import { Icon } from "astro-icon/components";
 
-import { cn } from "../lib/utils/cn";
-import Input from "./Input.astro";
+import { cn } from "~/lib/utils/cn";
 
 type Props = {
   currentPage: string;
