--- a/src/components/accordion/Summary.astro
+++ b/src/components/accordion/Summary.astro
@@ -1,9 +1,9 @@
 ---
 import { Icon } from "astro-icon/components";
 
-import { reverseSlugCaseToOriginal } from "../../lib/utils/helper";
+import { reverseSlugCaseToOriginal } from "~/lib/utils/helper";
 
-import type { CategoryProps, TOCProps } from "../../lib/utils/index.type";
+import type { CategoryProps, TOCProps } from "~/lib/utils/index.type";
 
 type Props = {
   item: TOCProps | CategoryProps;
