--- a/src/components/Input.astro
+++ b/src/components/Input.astro
@@ -1,7 +1,7 @@
 ---
 import { cva } from "class-variance-authority";
 
-import { cn } from "../lib/utils/cn";
+import { cn } from "~/lib/utils/cn";
 
 import type { HTMLAttributes } from "astro/types";
 import type { VariantProps } from "class-variance-authority";
