--- a/src/components/accordion/AccordionItem.astro
+++ b/src/components/accordion/AccordionItem.astro
@@ -1,8 +1,9 @@
 ---
-import { cn } from "../../lib/utils/cn";
 import Summary from "./Summary.astro";
 
-import type { CategoryProps, TOCProps } from "../../lib/utils/index.type";
+import { cn } from "~/lib/utils/cn";
+
+import type { CategoryProps, TOCProps } from "~/lib/utils/index.type";
 
 type Props = {
   item: TOCProps | CategoryProps;
