--- a/src/components/accordion/AccordionList.astro
+++ b/src/components/accordion/AccordionList.astro
@@ -1,12 +1,13 @@
 ---
-import { generateCategoryPaths } from "../../lib/utils/generate-paths";
+import AccordionItem from "./AccordionItem.astro";
+
+import { generateCategoryPaths } from "~/lib/utils/generate-paths";
 import {
   renameAttributes,
   reverseSlugCaseToOriginal,
-} from "../../lib/utils/helper";
-import AccordionItem from "./AccordionItem.astro";
+} from "~/lib/utils/helper";
 
-import type { CategoryProps, TOCProps } from "../../lib/utils/index.type";
+import type { CategoryProps, TOCProps } from "~/lib/utils/index.type";
 
 type Props = {
   outlines: ReadonlyArray<CategoryProps> | ReadonlyArray<TOCProps>;
