--- a/src/components/card/CardTitle.astro
+++ b/src/components/card/CardTitle.astro
@@ -1,5 +1,5 @@
 ---
-import { cn } from "../../lib/utils/cn";
+import { cn } from "~/lib/utils/cn";
 
 import type { HTMLAttributes } from "astro/types";
 
