--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,4 @@
 ---
-import { pwaAssetsHead } from "virtual:pwa-assets/head";
-import { pwaInfo } from "virtual:pwa-info";
-
 import Navbar from "./Navbar.astro";
 ---
 
@@ -12,14 +9,7 @@ import Navbar from "./Navbar.astro";
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <slot name="metadata" />
-    {
-      pwaAssetsHead.themeColor && (
-        <meta name="theme-color" content={pwaAssetsHead.themeColor.content} />
-      )
-    }
-    {pwaAssetsHead.links.map((link) => <link {...link} />)}
-    {pwaInfo && <Fragment set:html={pwaInfo.webManifest.linkTag} />}
-    <script src="../services/pwa.ts"></script>
+    <script is:inline src="/sw.js"></script>
   </head>
   <body
     class="bg-light-100 text-slate-700 dark:bg-dark-100 dark:text-slate-400 [&_*]:font-poppins"
