--- a/src/layouts/Navbar.astro
+++ b/src/layouts/Navbar.astro
@@ -1,8 +1,8 @@
 ---
 import { Icon } from "astro-icon/components";
 
-import Separator from "../components/Separator.astro";
-import ThemeToggle from "../components/ThemeToggle.astro";
+import Separator from "~/components/Separator.astro";
+import ThemeToggle from "~/components/ThemeToggle.astro";
 ---
 
 <header
