feat:[WIP] setup search page and dialog modal using web component

--- a/src/components/BibliographyLists.astro
+++ b/src/components/BibliographyLists.astro
@@ -6,7 +6,7 @@ import { Icon } from "astro-icon/components";
 import { Image } from "astro:assets";
 
 import coverNotFound from "~/assets/images/book-cover-not-available.png";
-import { generateBibliographyPaths } from "~/lib/utils/generate-paths";
+import { generateBibliographyPaths } from "~/lib/utils/generatePaths";
 
 import type { BibliographyProps } from "~/lib/utils/index.type";
 
@@ -27,7 +27,7 @@ const formattedBibliographies = generateBibliographyPaths(
           src={coverNotFound}
           alt={`${bibliography.title}'s cover bibliography`}
           sizes="(max-width: 768px) 100vw, (max-width: 1200px) 50vw, 33vw"
-          class="relative aspect-[1/1.5] w-full bg-gray-100 md:rounded-[10px] object-cover object-center"
+          class="relative aspect-[1/1.5] w-full bg-gray-100 object-cover object-center md:rounded-[10px]"
         />
       </a>
       <CardFooter class="mt-1.5 flex-col items-start gap-0.5 p-0 text-dark-100 dark:text-light-300">
