--- a/src/pages/categories/[id].astro
+++ b/src/pages/categories/[id].astro
@@ -4,11 +4,11 @@ import BibliographyLists from "~/components/BibliographyLists.astro";
 import Breadcrumb from "~/components/Breadcrumb.astro";
 import PageControl from "~/components/PageControl.astro";
 import Layout from "~/layouts/Layout.astro";
-import { getBibliographies } from "~/lib/bibliographies.server";
 import { getCategories } from "~/lib/categories.server";
-import { extractCategoryPaths } from "~/lib/utils/extract-category-paths";
+import { extractCategoryPaths } from "~/lib/utils/extractCategoryPaths";
 import { reverseSlugCaseToOriginal } from "~/lib/utils/helper";
 
+// TODO: implement paginate using paginate() inside param
 export const getStaticPaths = async () => {
   const { categories } = await getCategories();
 
@@ -16,10 +16,8 @@ export const getStaticPaths = async () => {
 };
 
 const { id } = Astro.params;
-const { title } = Astro.props;
+const { categories, title, bibliographies } = Astro.props;
 
-const { bibliographies } = await getBibliographies(id);
-const { categories } = await getCategories();
 const titleMeta = `Daftar Buku ${title} - Maktaba YARSI`;
 const descriptionMeta = `Berikut daftar buku kategori ${title}`;
 const urlMeta = `${import.meta.env.SITE}/categories/${id}`;
@@ -29,7 +27,6 @@ const urlMeta = `${import.meta.env.SITE}/categories/${id}`;
   <Fragment slot="metadata">
     <!-- Primary Meta Tags -->
     <title>{titleMeta}</title>
-    <meta name="title" content={titleMeta} />
     <meta name="description" content={descriptionMeta} />
     <meta name="keywords" content={reverseSlugCaseToOriginal(title)} />
 
