--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -2,14 +2,16 @@
 import Skeleton from "./Skeleton.astro";
 
 const darkIcon = `
-  <svg xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" viewBox="0 0 24 24"><use href="#lucide--moon"/>
-    <symbol id="lucide--moon" viewBox="0 0 24 24">
-      <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.35" d="M12 3a6 6 0 0 0 9 9a9 9 0 1 1-9-9" />
+  <svg xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" viewBox="0 0 24 24">
+    <use href="#lucide--moon-star"/>
+    <symbol id="lucide--moon-star" viewBox="0 0 24 24">
+      <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.35" d="M12 3a6 6 0 0 0 9 9a9 9 0 1 1-9-9m8 0v4m2-2h-4" />
     </symbol>
   </svg>
 `;
 const lightIcon = `
-  <svg xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" viewBox="0 0 24 24"><use href="#lucide--sun"/>
+  <svg xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" viewBox="0 0 24 24">
+    <use href="#lucide--sun"/>
     <symbol id="lucide--sun" viewBox="0 0 24 24">
       <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.35">
         <circle cx="12" cy="12" r="4" />
@@ -29,7 +31,7 @@ const lightIcon = `
   const theme = localStorage.getItem("theme") ?? "dark";
   button.innerHTML = theme === "dark" ? darkIcon : lightIcon;
 
-  button.addEventListener("click", () => {
+  const toggleTheme = () => {
     const currentTheme = localStorage.getItem("theme");
     if (currentTheme === "dark") {
       document.documentElement.classList.remove("dark");
@@ -39,5 +41,13 @@ const lightIcon = `
       localStorage.setItem("theme", "dark");
     }
     button.innerHTML = currentTheme === "light" ? darkIcon : lightIcon;
+  };
+
+  // TODO: please make this logic of code cleaner
+  button.addEventListener("click", toggleTheme);
+  document.addEventListener("astro:after-swap", () => {
+    const button = document.querySelector("button");
+    button.innerHTML =
+      localStorage.getItem("theme") === "dark" ? darkIcon : lightIcon;
   });
 </script>
